--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -30,6 +30,7 @@ header {
       width:100%;
       height:auto;
     	padding:20px 22px;
+			overflow:visible;
     }
   }
 
